Refactor: mejoras del SonarQube en ServiciosMusica y SistemaEmparejamiento
A partir de la investigacion de las buenas practicas con sonarqube se hizo un refactor de las dos clases anteriormente mencionadas