@@ -4,72 +4,64 @@ import modelos.usuario.PerfilUsuario;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class SistemaEmparejamiento {
-	public SistemaEmparejamiento() {
+
+	public SistemaEmparejamiento() {//Constructor vacio
 	}
 	//usuario referencia
-	public List referencia(String usuario){
+	public List<PerfilUsuario> referencia(String usuario){
 		return GestorArchivos.leerListaObjetos("PerfilUsuario.json", PerfilUsuario.class).stream()
 				.filter(perfilUsuario -> perfilUsuario.getUsuario().equals((usuario))).toList();
 	}
 	//Todos los usuarios excepto el referencia
 
-	public List general(String usuario){
+	public List<PerfilUsuario> general(String usuario){
 		return GestorArchivos.leerListaObjetos("PerfilUsuario.json", PerfilUsuario.class).stream()
 				.filter(perfilUsuario -> !perfilUsuario.getUsuario().equals((usuario))).toList();
 	}
-	public HashMap<String, Integer> porAlbum(String usuario) {
-		HashMap<String, Integer> puntuacion = new HashMap<>();
+	public Map<String, Integer> porAlbum(String usuario) {
+		Map<String, Integer> puntuacion = new HashMap<>();
 		//compara todos los usuarios del sistema con el usuario referencia
-		for (Object o : general(usuario)) {
-			PerfilUsuario perfilUsuario = (PerfilUsuario) o;
+		for (PerfilUsuario perfilUsuario : general(usuario)) {
 			int contador = 0;
-			for (Object o1 : referencia(usuario)) {
-				PerfilUsuario perfilUsuario1 = (PerfilUsuario) o1;
-				for (Object o2 : perfilUsuario.getAlbums()) {
-					if (perfilUsuario1.getAlbums().contains(o2)) {
+			for (PerfilUsuario perfilUsuario1 : referencia(usuario)) {
+				for (Object o: perfilUsuario.getAlbums()) {
+					if (perfilUsuario1.getAlbums().contains(o)) {
 						contador+=2;
 					}
 				}
 			}
 			puntuacion.put(perfilUsuario.getUsuario(), contador);
 		}
-
 		return puntuacion;
 	}
 
-	public HashMap<String, Integer> porArtista(String usuario) {
+	public Map<String, Integer> porArtista(String usuario) {
 		HashMap<String, Integer> puntuacion = new HashMap<>();
 		//compara todos los usuarios del sistema con el usuario referencia
-		for (Object o : general(usuario)) {
-			PerfilUsuario perfilUsuario = (PerfilUsuario) o;
+		for (PerfilUsuario perfilUsuario : general(usuario)) {
 			int contador = 0;
-			for (Object o1 : referencia(usuario)) {
-				PerfilUsuario perfilUsuario1 = (PerfilUsuario) o1;
-				for (Object o2 : perfilUsuario.getArtistas()) {
-					if (perfilUsuario1.getArtistas().contains(o2)) {
+			for (PerfilUsuario perfilUsuario1 : referencia(usuario)) {
+				for (Object o : perfilUsuario.getArtistas()) {
+					if (perfilUsuario1.getArtistas().contains(o)) {
 						contador+=3;
 					}
 				}
 			}
 			puntuacion.put(perfilUsuario.getUsuario(), contador);
 		}
-
 		return puntuacion;
 	}
 
-	public HashMap<String, Integer> porCancion(String usuario) {
+	public Map<String, Integer> porCancion(String usuario) {
 		HashMap<String, Integer> puntuacion = new HashMap<>();
 		//compara todos los usuarios del sistema con el usuario referencia
-		for (Object o : general(usuario)) {
-			PerfilUsuario perfilUsuario = (PerfilUsuario) o;
+		for (PerfilUsuario perfilUsuario : general(usuario)) {
 			int contador = 0;
-			for (Object o1 : referencia(usuario)) {
-				PerfilUsuario perfilUsuario1 = (PerfilUsuario) o1;
-				for (Object o2 : perfilUsuario.getCanciones()) {
-					if (perfilUsuario1.getCanciones().contains(o2)) {
+			for (PerfilUsuario perfilUsuario1 : referencia(usuario)) {
+				for (Object o : perfilUsuario.getCanciones()) {
+					if (perfilUsuario1.getCanciones().contains(o)) {
 						contador++;
 					}
 				}
@@ -80,65 +72,56 @@ public class SistemaEmparejamiento {
 		return puntuacion;
 	}
 
-	public HashMap<String, Integer> porCarrera(String usuario) {
+	public Map<String, Integer> porCarrera(String usuario) {
 		HashMap<String, Integer> puntuacion = new HashMap<>();
 		//compara todos los usuarios del sistema con el usuario referencia
-		for (Object o : general(usuario)) {
-			PerfilUsuario perfilUsuario = (PerfilUsuario) o;
+		for (PerfilUsuario perfilUsuario : general(usuario)) {
 			int contador = 0;
-			for (Object o1 : referencia(usuario)) {
-				PerfilUsuario perfilUsuario1 = (PerfilUsuario) o1;
+			for (PerfilUsuario perfilUsuario1 : referencia(usuario)) {
 				if (perfilUsuario.getCarrera().equals(perfilUsuario1.getCarrera())) {
 					contador+=1;
 				}
 			}
 			puntuacion.put(perfilUsuario.getUsuario(), contador);
 		}
-		System.out.println(puntuacion);
 		return puntuacion;
 	}
 
-	public HashMap<String, Integer> porOrientacion(String usuario) {
+	public Map<String, Integer> porOrientacion(String usuario) {
 		HashMap<String, Integer> puntuacion = new HashMap<>();
 		//compara todos los usuarios del sistema con el usuario referencia
-		for (Object o : general(usuario)) {
-			PerfilUsuario perfilUsuario = (PerfilUsuario) o;
+		for (PerfilUsuario perfilUsuario : general(usuario)) {
 			int contador = 0;
-			for (Object o1 : referencia(usuario)) {
-				PerfilUsuario perfilUsuario1 = (PerfilUsuario) o1;
+			for (PerfilUsuario perfilUsuario1 : referencia(usuario)) {
 				if (perfilUsuario.getOrientacion().equals(perfilUsuario1.getOrientacion())) {
 					contador+=1;
 				}
 			}
 			puntuacion.put(perfilUsuario.getUsuario(), contador);
 		}
-		System.out.println(puntuacion);
 		return puntuacion;
 	}
 
-	public HashMap<String, Integer> porGenero(String usuario) {
+	public Map<String, Integer> porGenero(String usuario) {
 		HashMap<String, Integer> puntuacion = new HashMap<>();
 		//compara todos los usuarios del sistema con el usuario referencia
-		for (Object o : general(usuario)) {
-			PerfilUsuario perfilUsuario = (PerfilUsuario) o;
+		for (PerfilUsuario perfilUsuario : general(usuario)) {
 			int contador = 0;
-			for (Object o1 : referencia(usuario)) {
-				PerfilUsuario perfilUsuario1 = (PerfilUsuario) o1;
+			for (PerfilUsuario perfilUsuario1 : referencia(usuario)) {
 				if (perfilUsuario.getGenero().equals(perfilUsuario1.getGenero())) {
 					contador+=1;
 				}
 			}
 			puntuacion.put(perfilUsuario.getUsuario(), contador);
 		}
-		System.out.println(puntuacion);
 		return puntuacion;
 	}
 	//lee el hashmap de porCarrera() y enlista a todos los nombre de usuario que tienen hashvalor 1
-		public List descartarMismaCarrera(String usuario) {
+		public List<String> descartarMismaCarrera(String usuario) {
 			return porCarrera(usuario).entrySet().stream()
 					.filter(entry -> entry.getValue() == 1)
 					.map(Map.Entry::getKey)
-					.collect(Collectors.toList());
+					.toList();
 		}
 
 }
